--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       width: 100px;
       border: 1px solid #000;
     }
+    
+    @media screen and (max-width: 520px) {
+    .col {
+      width: 100px; 
+      }
+    .row {
+      height: 100px;
+    }
+}
   </style>
 </head>
 <body>
