--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
     
     @media screen and (max-width: 520px) {
     .col {
-      width: 100px; 
+      width: 50px; 
       }
     .row {
-      height: 100px;
+      height: 50px;
+    }
+    .images img {
+      width: 50px;
+      border: 1px solid #000;
     }
 }
   </style>
