--- a/index.html
+++ b/index.html
@@ -24,15 +24,66 @@
     
     @media screen and (max-width: 520px) {
     .col {
-      width: 50px; 
+      width: 70px; 
       }
     .row {
-      height: 50px;
+      height: 70px;
     }
     .images img {
-      width: 50px;
+      width: 70px;
       border: 1px solid #000;
     }
+      img#slice_0_0 {
+    width: 70px;
+}
+            img#slice_0_0 {
+    width: 70px;
+}
+            img#slice_0_1 {
+    width: 70px;
+}
+            img#slice_0_2 {
+    width: 70px;
+}
+            img#slice_0_3 {
+    width: 70px;
+}
+            img#slice_1_0 {
+    width: 70px;
+}
+            img#slice_1_1 {
+    width: 70px;
+}
+            img#slice_1_2 {
+    width: 70px;
+}
+            img#slice_1_3 {
+    width: 70px;
+}
+            img#slice_2_0 {
+    width: 70px;
+}
+            img#slice_2_1 {
+    width: 70px;
+}
+            img#slice_2_2 {
+    width: 70px;
+}
+            img#slice_2_3 {
+    width: 70px;
+}
+            img#slice_3_0 {
+    width: 70px;
+}
+            img#slice_3_1 {
+    width: 70px;
+}
+            img#slice_3_2 {
+    width: 70px;
+}
+            img#slice_3_3 {
+    width: 70px;
+}
 }
   </style>
 </head>
